new fabs appear horizontally on small screens

--- a/clients/android/app/src/main/res/layout/fragment_list_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_list_files.xml
@@ -71,6 +71,7 @@
                 android:text="@string/empty_folder" />
 
             <LinearLayout
+                android:id="@+id/list_files_fab_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
@@ -105,7 +106,7 @@
                     android:id="@+id/list_files_fab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="18dp"
+                    android:layout_margin="10dp"
                     app:backgroundTint="@color/colorPrimary"
                     android:contentDescription="@string/list_files_create_file"
                     android:onClick="@{() -> listFilesViewModel.collapseExpandFAB()}"
