--- a/clients/android/app/src/main/res/layout/fragment_list_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_list_files.xml
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
