--- a/clients/android/app/src/main/res/layout-sw600dp/toolbar_drawing.xml
+++ b/clients/android/app/src/main/res/layout-sw600dp/toolbar_drawing.xml
@@ -7,6 +7,8 @@
     android:background="@color/colorPrimaryDark"
     android:gravity="center_horizontal"
     android:orientation="horizontal"
+    android:clickable="true"
+    android:focusable="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageButton
@@ -51,7 +53,7 @@
         android:id="@+id/drawing_pen_size"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:max="100"
+        android:max="99"
         android:layout_gravity="center_vertical"
         android:layout_margin="10dp"/>
 
