--- a/clients/android/app/src/main/res/layout/toolbar_drawing.xml
+++ b/clients/android/app/src/main/res/layout/toolbar_drawing.xml
@@ -7,6 +7,8 @@
     android:background="@color/colorPrimaryDark"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:clickable="true"
+    android:focusable="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageButton
@@ -51,7 +53,7 @@
             android:id="@+id/drawing_pen_size"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
-            android:max="100"
+            android:max="99"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"/>
 
