--- a/clients/android/app/src/main/res/layout/activity_drawing.xml
+++ b/clients/android/app/src/main/res/layout/activity_drawing.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/handwriting_editor_layout"
+    android:id="@+id/drawing_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ProgressBar
-        android:id="@+id/handwriting_editor_progress_bar"
+        android:id="@+id/drawing_progress_bar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,14 +19,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <app.lockbook.ui.HandwritingEditorView
-        android:id="@+id/handwriting_editor"
+    <app.lockbook.ui.DrawingView
+        android:id="@+id/drawing_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/handwriting_editor_progress_bar" />
+        app:layout_constraintTop_toBottomOf="@+id/drawing_progress_bar" />
 
     <View
         android:layout_width="match_parent"
@@ -35,7 +35,7 @@
         android:background="@color/drawingUntouchableBackground" />
 
     <FrameLayout
-        android:id="@+id/handwriting_editor_frame_layout"
+        android:id="@+id/drawing_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -45,79 +45,83 @@
         app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:id="@+id/handwriting_editor_tools_menu"
+                android:id="@+id/drawing_tools_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center_vertical"
                 android:background="@color/colorPrimaryDark"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
+                android:visibility="gone"
                 tools:ignore="UselessParent">
 
                 <ImageButton
                     android:id="@+id/drawing_erase"
                     style="@style/Main.Widget.DrawingImageButton"
                     android:src="@drawable/ic_eraser_outline"
-                    android:contentDescription="@string/handwriting_editor_eraser_description" />
+                    android:contentDescription="@string/drawing_eraser_description" />
 
                 <ImageButton
                     android:id="@+id/drawing_pen"
                     style="@style/Main.Widget.DrawingImageButton"
                     android:src="@drawable/ic_pencil_outline"
-                    android:contentDescription="@string/handwriting_editor_pen_description" />
+                    android:contentDescription="@string/drawing_pen_description" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_white"
-                    style="@style/Main.Widget.DrawingButton"
-                    app:backgroundTint="@android:color/white" />
+                    style="@style/Main.Widget.DrawingButton" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/drawing_color_black"
+                    style="@style/Main.Widget.DrawingButton" />
+
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_blue"
-                    style="@style/Main.Widget.DrawingButton"
-                    app:backgroundTint="@android:color/holo_blue_light" />
+                    style="@style/Main.Widget.DrawingButton" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_red"
-                    style="@style/Main.Widget.DrawingButton"
-                    app:backgroundTint="@android:color/holo_red_light" />
+                    style="@style/Main.Widget.DrawingButton" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/drawing_color_green"
-                    style="@style/Main.Widget.DrawingButton"
-                    app:backgroundTint="@android:color/holo_green_light" />
+                    style="@style/Main.Widget.DrawingButton" />
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/drawing_color_orange"
-                    style="@style/Main.Widget.DrawingButton"
-                    app:backgroundTint="@android:color/holo_orange_light" />
+                    android:id="@+id/drawing_color_yellow"
+                    style="@style/Main.Widget.DrawingButton" />
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/drawing_color_purple"
-                    style="@style/Main.Widget.DrawingButton"
-                    app:backgroundTint="@android:color/holo_purple" />
+                    android:id="@+id/drawing_color_magenta"
+                    style="@style/Main.Widget.DrawingButton" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/drawing_color_cyan"
+                    style="@style/Main.Widget.DrawingButton" />
 
                 <TextView
-                    android:id="@+id/handwriting_editor_pen_small"
+                    android:id="@+id/drawing_pen_small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:text="@string/handwriting_editor_pen_small_description" />
+                    android:text="@string/drawing_pen_small_description" />
 
                 <TextView
-                    android:id="@+id/handwriting_editor_pen_medium"
+                    android:id="@+id/drawing_pen_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
                     android:layout_marginHorizontal="5dp"
-                    android:text="@string/handwriting_editor_pen_medium_description" />
+                    android:text="@string/drawing_pen_medium_description" />
 
                 <TextView
-                    android:id="@+id/handwriting_editor_pen_large"
+                    android:id="@+id/drawing_pen_large"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
                     android:layout_marginBottom="10dp"
-                    android:text="@string/handwriting_editor_pen_large_description" />
+                    android:text="@string/drawing_pen_large_description" />
 
 
             </LinearLayout>
