--- a/clients/android/app/src/main/res/menu/menu_list_files.xml
+++ b/clients/android/app/src/main/res/menu/menu_list_files.xml
@@ -86,8 +86,16 @@
         app:showAsAction="always" />
 
     <item
-        android:icon="@drawable/ic_baseline_more_vert_24"
+        android:id="@+id/menu_list_files_share"
+        android:icon="@drawable/ic_baseline_share_24"
+        android:title="@string/menu_list_files_move"
+        android:visible="false"
         android:orderInCategory="5"
+        app:showAsAction="always" />
+
+    <item
+        android:icon="@drawable/ic_baseline_more_vert_24"
+        android:orderInCategory="6"
         app:showAsAction="always"
         android:title="@string/overflow">
         <menu
