--- a/clients/android/app/src/main/res/layout/progress_overlay.xml
+++ b/clients/android/app/src/main/res/layout/progress_overlay.xml
@@ -8,7 +8,7 @@
     android:background="@android:color/black"
     android:clickable="true"
     android:visibility="gone"
-    tools:ignore="KeyboardInaccessibleWidget">
+    tools:ignore="KeyboardInaccessibleWidget,Overdraw">
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
