--- a/clients/android/app/src/main/res/layout/activity_drawing.xml
+++ b/clients/android/app/src/main/res/layout/activity_drawing.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawing_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -39,7 +40,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimaryDark"
-            android:translationZ="1dp" />
+            android:clickable="true"
+            android:translationZ="1dp"
+            tools:ignore="KeyboardInaccessibleWidget" />
 
         <include
             android:id="@+id/drawing_toolbar"
