--- a/clients/android/app/src/main/res/layout/fragment_files_list.xml
+++ b/clients/android/app/src/main/res/layout/fragment_files_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -23,33 +24,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:actionBarSize"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
-                app:navigationIcon="@drawable/ic_outline_menu_24"
                 app:menu="@menu/menu_files_list"
+                app:navigationIcon="@drawable/ic_outline_menu_24"
                 app:title="@string/lockbook_title" />
 
-            <LinearLayout
-                android:id="@+id/recent_files_layout"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|enterAlways|snap"
-                android:orientation="vertical">
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways">
 
-                <com.google.android.material.textview.MaterialTextView
+                <LinearLayout
+                    android:id="@+id/recent_files_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="15dp"
-                    android:paddingBottom="15dp"
-                    android:textAppearance="?attr/textAppearanceTitleMedium"
-                    android:text="@string/recent_documents"/>
+                    android:orientation="vertical"
+                    tools:ignore="UselessParent">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recent_files_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingHorizontal="20dp"
-                    android:paddingBottom="10dp"/>
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="15dp"
+                        android:paddingBottom="15dp"
+                        android:text="@string/recent_documents"
+                        android:textAppearance="?attr/textAppearanceTitleMedium" />
 
-            </LinearLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recent_files_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="20dp"
+                        android:paddingBottom="10dp" />
+
+                </LinearLayout>
+            </FrameLayout>
 
             <app.lockbook.ui.BreadCrumbView
                 android:id="@+id/files_breadcrumb_bar"
@@ -178,6 +185,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/header_navigation_drawer_files_list"
-        app:menu="@menu/menu_files_list_drawer"/>
+        app:menu="@menu/menu_files_list_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
