--- a/clients/android/app/src/main/res/layout/activity_main_screen.xml
+++ b/clients/android/app/src/main/res/layout/activity_main_screen.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <androidx.slidingpanelayout.widget.SlidingPaneLayout
@@ -15,11 +15,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/files_fragment"
-            android:name="app.lockbook.screen.FilesListFragment"
-            android:layout_width="340dp"
+            android:id="@+id/files_container"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="450dp"
             android:layout_height="match_parent"
-            android:layout_gravity="start" />
+            android:layout_gravity="start"
+            app:navGraph="@navigation/files_navigation"
+            app:defaultNavHost="true" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/detail_container"
