--- a/clients/android/app/src/main/res/menu/menu_files_list.xml
+++ b/clients/android/app/src/main/res/menu/menu_files_list.xml
@@ -6,8 +6,10 @@
         android:id="@+id/menu_files_list_search"
         android:icon="@drawable/ic_round_search_24"
         android:title="@string/search"
-        app:actionViewClass="app.lockbook.ui.FixQueryChangeSearchView"
-        app:showAsAction="always|collapseActionView" />
+        app:showAsAction="always"/>
+<!--        app:actionViewClass="app.lockbook.ui.FixQueryChangeSearchView"-->
+<!--        app:showAsAction="always|collapseActionView"-->
+
 
     <item
         android:id="@+id/menu_list_files_sort"
