--- a/clients/android/app/src/main/res/layout/fragment_search_documents.xml
+++ b/clients/android/app/src/main/res/layout/fragment_search_documents.xml
@@ -41,6 +41,7 @@
         android:id="@+id/search_documents_results"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
