--- a/clients/android/app/src/main/res/layout/activity_import_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_import_account.xml
@@ -30,4 +30,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/import_account_progress_bar" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/import_exit_app"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/exit_app"
+        android:visibility="gone"
+        android:layout_marginTop="20dp"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/import_info"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
