--- a/clients/android/app/src/main/res/layout/fragment_search_documents.xml
+++ b/clients/android/app/src/main/res/layout/fragment_search_documents.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:imeOptions="flagNoExtractUi"
+            app:searchIcon="@null"
             app:iconifiedByDefault="false" />
 
 
