--- a/clients/android/app/src/main/res/layout/activity_debug.xml
+++ b/clients/android/app/src/main/res/layout/activity_debug.xml
@@ -3,18 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:id="@+id/debug_scroller"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/debug_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:paddingHorizontal="10dp"/>
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/debug_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top|start"
-            android:textIsSelectable="true"
-            android:importantForAutofill="no" />
-
-    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
