--- a/clients/android/app/src/main/res/layout/fragment_text_editor.xml
+++ b/clients/android/app/src/main/res/layout/fragment_text_editor.xml
@@ -49,6 +49,7 @@
             android:layout_height="40dp"
             android:orientation="horizontal"
             android:gravity="center"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="5dp">
 
