--- a/clients/android/app/src/main/res/layout/header_navigation_drawer_files_list.xml
+++ b/clients/android/app/src/main/res/layout/header_navigation_drawer_files_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="20dp"
+    android:layout_marginHorizontal="20dp"
     android:layout_marginTop="20dp"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
@@ -12,7 +12,6 @@
         android:id="@+id/filesListUsageDonut"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="40dp"
         app:donut_gapWidth="0"
         app:donut_strokeWidth="8dp"/>
 
