--- a/clients/android/app/src/main/res/layout/fragment_shared_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_shared_files.xml
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 app:title="@string/pending_shared"
                 app:menu="@menu/menu_shared_files"
-                app:navigationIcon="@drawable/ic_outline_close_24"
+                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                 android:elevation="0dp" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -29,8 +29,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/shared_files"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginVertical="30dp"/>
+        android:layout_height="match_parent"/>
 
 
 </LinearLayout>
